--- a/src/app/personnels/info-person/emulation-title/emulation-title.component.html
+++ b/src/app/personnels/info-person/emulation-title/emulation-title.component.html
@@ -1,11 +1,8 @@
-<form action="" [formGroup]="formData">
+<form action="">
   <div class="action-form">
+    <button>Ghi  </button>
     <button>Khóa dữ liệu</button>
   </div>
-  <app-note-form>
-    Ô nhập ngày tháng, nếu Qúy vị không nhớ rõ thì nhập ngày là 01,tháng năm bắt buộc phải nhập chính sác.
-    Khi chiết xuất dữ liệu chỉ sử dụng tháng năm
-  </app-note-form>
   <div class="form-item">
     <div class="form-item-title">
      Danh sách
@@ -19,34 +16,12 @@
           <th>Ngày cấp </th>
           <th>Số quyết định</th>
           <th>
-            <span class="action-icon" (click)="onSave()"><i class="fa fa-plus"></i></span>
-            <span class="action-icon" (click)="resetForm(formData)"><i
-              class="fa fa-remove icon-remove-update"></i></span>
+            <span class="action-icon" (click)="openModal(emulationTitle)"><i class="fa fa-plus"></i></span>
           </th>
         </tr>
         </thead>
         <tbody>
         <!---->
-        <tr >
-          <td></td>
-          <td>
-            <select class="form-control" formControlName="title">
-              <option value="">--------Chọn---------</option>
-              <option value="">--------Chọn---------</option>
-            </select>
-          </td>
-          <td>
-            <input type="text"  formControlName="dateLicense">
-          </td>
-          <td>
-            <input type="text" formControlName="numberDecide">
-          </td>
-          <td>
-            <span class="action-icon"><i class="fa fa-plus"></i></span>
-            <span class="action-icon" (click)="resetForm(formData)"><i
-              class="fa fa-remove icon-remove-update"></i></span>
-          </td>
-        </tr>
         <!---->
         <tr *ngFor="let item of listEmulation.toArray();let i = index ">
           <td>{{i+1}}</td>
@@ -66,3 +41,50 @@
   </div>
   <!---->
 </form>
+
+
+
+<!---->
+
+<modal #emulationTitle size='lg' cssClass="my-modal-lg" backdrop="false">
+
+  <modal-header>
+    <div class="action-form mgb-i-10">
+      <button (click)="closeModal(emulationTitle)">Thoát</button>
+    </div>
+  </modal-header>
+
+  <modal-body>
+    <form action="" class="mgb-i-10" [formGroup]="formData">
+      <div class="row">
+
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+
+          <div class="item-control pdt-i-0">
+            <label>Danh hiệu thi đua </label>
+            <select class="form-control" formControlName="title">
+              <option value="">--------Chọn---------</option>
+              <option value="">--------Chọn---------</option>
+            </select>
+          </div>
+          <!---->
+
+          <div class="item-control">
+            <label>Ngày cấp</label>
+            <input type="date" formControlName="dateLicense">
+          </div>
+
+          <div class="item-control  ">
+            <label>Số quyết định</label>
+            <input type="text" formControlName="numberDecide">
+          </div>
+        </div>
+      </div>
+    </form>
+  </modal-body>
+
+  <modal-footer>
+    <button class="btn-action" (click)="addItem()">{{positionUpdate == -1?'Thêm':'Cập nhật'}}</button>
+  </modal-footer>
+
+</modal>
