--- a/src/app/personnels/info-person/foreign/foreign.component.css
+++ b/src/app/personnels/info-person/foreign/foreign.component.css
@@ -1,9 +1,14 @@
-.item-control {
-  text-align: center;
-}
+/*.item-control {*/
+  /*text-align: center;*/
+/*}*/
 
 @media (max-width: 767px) {
   .item-control {
     text-align: left;
   }
+}
+form{
+  border: none;
+  padding: 0;
+  margin: 0;
 }
