--- a/src/app/personnels/info-person/language-teachnoly-politic/info-technology/info-technology.component.css
+++ b/src/app/personnels/info-person/language-teachnoly-politic/info-technology/info-technology.component.css
@@ -2,14 +2,6 @@
   width: 100%;
 }
 select,input{
-  float: none;
+  float: none !important;
   min-width: 0;
 }
-@media (min-width: 768px) {
-  .date{
-    width: 70px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-}
-
