--- a/src/app/personnels/personnels.component.html
+++ b/src/app/personnels/personnels.component.html
@@ -7,7 +7,7 @@
   <div id="app-menu-left">
     <div class="app-menu-content">
 
-      <h4 class="app-menu-title-catalog" (click)="toggleCatalog('menu-info')">Thôn tin nhân sự </h4>
+      <h4 class="app-menu-title-catalog" (click)="toggleCatalog('menu-info')">Thông tin nhân sự </h4>
       <app-menu-app [menus]="menuInfo" id="menu-info"></app-menu-app>
 
       <h4 class="app-menu-title-catalog" (click)="toggleCatalog('menuManager')">Quản lý nhân sự  </h4>
