--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.css
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.css
@@ -4,15 +4,5 @@
 select,input{
   float: none;
   min-width: 0;
-}
-.form-item .action-form{
-  margin-bottom:0;
-  margin-top: 40px;
-  text-align: right;
-}
-
-@media (max-width: 767px) {
-  .form-item .action-form{
-    margin-top: 20px;
-  }
+  width: 100%;
 }
