--- a/src/app/personnels/info-person/science-topic/science-topic.component.css
+++ b/src/app/personnels/info-person/science-topic/science-topic.component.css
@@ -4,9 +4,5 @@
 select,input{
   float: none;
   min-width: 0;
-}
-@media (min-width: 768px) {
-  input {
-    max-width: 150px;
-  }
+  width: 100%;
 }
