--- a/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
+++ b/src/app/personnels/manager-personnels/edit-personnel/edit-personnel.component.html
@@ -1,83 +1,116 @@
-<div class="mgb-50;pdb-15 pdt-15" style="border: 1px solid #cccccc;margin-bottom: 50px;">
-  <form [formGroup]="formData" style="border-color: transparent;margin-bottom: 0px;">
-    <div class="col-xs-12 col-sm-8 col-sm-offset-2">
-      <div class="form-item">
-        <div class="form-item-title">
-          Sửa thông tin tài khoản cán bộ
-        </div>
 
-        <div class="item-control">
-          <label>Họ tên: </label>
-          <input type="text" required formControlName="fullName">
+  <form style="border: none;padding: 0" [formGroup]="formSearch">
+    <div class="row">
+      <div class="col-xs-12">
+        <div class="form-item">
+          <div class="form-item-title">
+            Tìm kiếm
+          </div>
+          <div class="item-control">
+            <label>Phòng ban </label>
+            <select class="form-control" formControlName="department">
+              <option value="">---Quan tri mang va an ninh he thong</option>
+            </select>
+          </div>
+          <div class="item-control">
+            <label class=" " style="margin-right: 116px;">Nhập tên hoặc mã cán bộ để kiếm </label>
+            <input type="text" class="mgb-15 mgr-20" style="float: none;width: 50%" formControlName="nameOrCodePersonnel">
+            <button class="btn-action" (click)="onSearch()">Tìm kiếm</button>
+          </div>
         </div>
+      </div>
+      <div class="col-xs-12 ">
+        <div class="form-item">
+          <div class="form-item-title">
+            Danh sách cán bộ
+          </div>
+          <div class="table-responsive">
+            <table class="table table-bordered">
+              <thead>
+              <tr>
+                <th>STT</th>
+                <th>Mã cán bộ</th>
+                <th>Họ tên</th>
+                <th>Ngày sinh</th>
+                <th>Tài khoản email</th>
+                <th>Username</th>
+                <th>Cập nhật</th>
+                <th>Xóa</th>
+              </tr>
+              </thead>
+              <tbody>
+              <!---->
 
-        <div class="item-control">
-          <label>Mã cán bộ: </label>
-          <input type="text" required formControlName="personnelCode">
-        </div>
+              <tr>
+                <td>{{1}}</td>
+                <td>{{item.personnelCode}}</td>
+                <td>{{item.fullName}}</td>
+                <td>{{item.dateOfBirth}}</td>
+                <td>{{item.email}}</td>
+                <td>{{item.acountSignIn}}</td>
+                <td>
+                  <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
+                </td>
+                <td>
+                  <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
+                </td>
+              </tr>
 
-        <div class="item-control">
-          <label>Tên đăng nhập: </label>
-          <input type="text" required formControlName="acountSignIn">
-        </div>
-        <div class="item-control">
-          <label>Mật khẩu: </label>
-          <input [type]="showPass == true?'text':'password'" required formControlName="passWord">
-        </div>
-        <div class="item-control">
-          <label >Hiện rõ </label>
-          <input type="checkbox" style="width: 42%" (change)="showPass = !showPass ">
-        </div>
-        <div class="item-control">
-          <label>Nhập lại mật khẩu: </label>
-          <input type="password" required formControlName="rePassWord">
-        </div>
-        <div class="action-form mgt-30 mgt-sm-50 text-center">
-          <button (click)="onSubmit()" type="submit">Cập nhật</button>
-          <button (click)="resetForm(formData)">Hủy bỏ</button>
+              </tbody>
+            </table>
+          </div>
         </div>
       </div>
     </div>
-    <div class="clearfix"></div>
   </form>
-  <div class="row ">
-    <div class="col-xs-12">
-      <div class="table-responsive">
-        <table class="table table-bordered">
-          <thead>
-          <tr>
-            <th>STT</th>
-            <th>Mã cán bộ</th>
-            <th>Họ tên</th>
-            <th>Ngày sinh</th>
-            <th>Tài khoản email</th>
-            <th>Username</th>
-            <th>Cập nhật</th>
-            <th>Xóa</th>
-          </tr>
-          </thead>
-          <tbody>
-          <!---->
 
-          <tr>
-            <td>{{1}}</td>
-            <td>{{item.personnelCode}}</td>
-            <td>{{item.fullName}}</td>
-            <td>{{item.dateOfBirth}}</td>
-            <td>{{item.email}}</td>
-            <td>{{item.acountSignIn}}</td>
-            <td>
-              <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
-            </td>
-            <td>
-              <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-            </td>
-          </tr>
+<modal #modalEdit size='lg' cssClass="my-modal-lg" backdrop="false">
 
-          </tbody>
-        </table>
-      </div>
+  <modal-header>
+    <div class="action-form mgb-i-10">
+      <button (click)="closeModal(modalEdit)">Thoát</button>
     </div>
-  </div>
-</div>
+  </modal-header>
 
+  <modal-body>
+    <form action="" class="mgb-i-10" [formGroup]="formData">
+      <div class="row">
+
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3 ">
+          <div class="item-control">
+            <label>Họ tên: </label>
+            <input type="text" required formControlName="fullName">
+          </div>
+
+          <div class="item-control">
+            <label>Mã cán bộ: </label>
+            <input type="text" required formControlName="personnelCode">
+          </div>
+
+          <div class="item-control">
+            <label>Tên đăng nhập: </label>
+            <input type="text" required formControlName="acountSignIn">
+          </div>
+          <div class="item-control">
+            <label>Mật khẩu: </label>
+            <input [type]="showPass == true?'text':'password'" required formControlName="passWord">
+          </div>
+          <div class="item-control">
+            <label>Hiện rõ </label>
+            <input type="checkbox" style="width: 42%" (change)="showPass = !showPass ">
+          </div>
+          <div class="item-control">
+            <label>Nhập lại<br class="hidden-xs"> mật khẩu: </label>
+            <input type="password" required formControlName="rePassWord">
+          </div>
+        </div>
+
+      </div>
+    </form>
+  </modal-body>
+
+  <modal-footer>
+    <button class="btn-action" (click)="addItem()">Cập nhật</button>
+  </modal-footer>
+
+</modal>
