--- a/src/app/personnels/manager-personnels/procedure-transfer-unit-work/procedure-transfer-unit-work.component.html
+++ b/src/app/personnels/manager-personnels/procedure-transfer-unit-work/procedure-transfer-unit-work.component.html
@@ -1,7 +1,7 @@
-<form style="padding-top: 25px" [formGroup]="formData">
+<form style="padding-top: 25px" [formGroup]="formSearch">
   <div class="row">
     <div class="col-xs-12">
-      <div class="form-item" formGroupName="infoSearch">
+      <div class="form-item">
         <div class="form-item-title">
           Làm thủ tục chuyển đơn vị công tác
         </div>
@@ -12,65 +12,14 @@
           </select>
         </div>
         <div class="item-control">
-          <label class="mgr-20 mgr-115">Nhập tên hoặc mã cán bộ để kiếm </label>
+          <label class="mgr-20 " style="margin-right: 116px;">Nhập tên hoặc mã cán bộ để kiếm </label>
           <input type="text" class="mgb-15 mgr-20" style="float: none;width: 50%" formControlName="nameOrCodePersonnel">
           <button class="btn-action" (click)="onSearch()">Tìm kiếm</button>
         </div>
       </div>
     </div>
     <!---->
-    <div class="col-xs-12 col-sm-8 col-sm-offset-2" [hidden]="!showFormDetail">
-      <div class="form-item " formGroupName="infoPersonnel">
-        <h4 class="text-center mgt-5">Thông tin chi tiết </h4>
-        <div class="item-control">
-          <label>Mã cán bộ: </label>
-          <input type="text" required formControlName="personnelCode">
-        </div>
 
-        <div class="item-control">
-          <label>Họ tên: </label>
-          <input type="text" required formControlName="fullName">
-        </div>
-
-        <div class="item-control">
-          <label>Ngày sinh: </label>
-          <input type="text" required formControlName="dateOfBirth">
-        </div>
-
-        <div class="item-control">
-          <label>Giới tính: </label>
-          <input type="text" required formControlName="sex">
-        </div>
-
-        <div class="item-control">
-          <label>Ngày chuyển : </label>
-          <input type="text" required formControlName="dateTransfer">
-        </div>
-
-        <div class="item-control">
-          <label>Số quyết định : </label>
-          <input type="text" required formControlName="numberDecide">
-        </div>
-        <div class="item-control">
-          <label>Ngày quyết định : </label>
-          <input type="text" required formControlName="dateDecide">
-        </div>
-        <div class="item-control ">
-          <label>Tóm tắt nột dung quyết định : </label>
-          <textarea class="form-control " style="width: 100%;height: 150px"
-                    formControlName="contentDecide"> </textarea>
-        </div>
-        <div class="item-control">
-          <label>Đơn vị chuyển tới: </label>
-          <select class="form-control mgb-20" style="width: 80%" formControlName="unitTransfer">
-            <option value="">---Chọn----</option>
-          </select>
-        </div>
-        <div class="text-center mgt-35">
-          <button class="btn-action" (click)="onProcess()">Ghi nhận</button>
-        </div>
-      </div>
-    </div>
     <!---->
     <div class="col-xs-12">
       <div class="table-responsive">
@@ -109,3 +58,70 @@
 
 </form>
 
+<modal #modal size='lg' cssClass="my-modal-lg" backdrop="false">
+
+  <modal-header>
+    <div class="action-form mgb-i-10">
+      <button (click)="closeModal(modal)">Thoát</button>
+    </div>
+  </modal-header>
+
+  <modal-body>
+    <form action="" style="border: none" class="mgb-i-10" [formGroup]="formDetail">
+      <div class="row">
+        <div class="col-xs-12 col-sm-8 col-sm-offset-2">
+            <h4 class="text-center mgt-5">Thông tin chi tiết </h4>
+            <div class="item-control">
+              <label>Mã cán bộ: </label>
+              <input type="text" required formControlName="personnelCode">
+            </div>
+
+            <div class="item-control">
+              <label>Họ tên: </label>
+              <input type="text" required formControlName="fullName">
+            </div>
+
+            <div class="item-control">
+              <label>Ngày sinh: </label>
+              <input type="text" required formControlName="dateOfBirth">
+            </div>
+
+            <div class="item-control">
+              <label>Giới tính: </label>
+              <input type="text" required formControlName="sex">
+            </div>
+
+            <div class="item-control">
+              <label>Ngày chuyển : </label>
+              <input type="text" required formControlName="dateTransfer">
+            </div>
+
+            <div class="item-control">
+              <label>Số quyết định : </label>
+              <input type="text" required formControlName="numberDecide">
+            </div>
+            <div class="item-control">
+              <label>Ngày quyết định : </label>
+              <input type="text" required formControlName="dateDecide">
+            </div>
+            <div class="item-control">
+              <label>Đơn vị chuyển tới: </label>
+              <select class="form-control mgb-20" style="width: 80%" formControlName="unitTransfer">
+                <option value="">---Chọn----</option>
+              </select>
+            </div>
+            <div class="item-control ">
+              <label>Tóm tắt nột dung quyết định : </label>
+              <textarea class="form-control " style="max-width:100%;width: 100%;height: 150px"
+                        formControlName="contentDecide"> </textarea>
+            </div>
+        </div>
+      </div>
+    </form>
+  </modal-body>
+
+  <modal-footer>
+    <button class="btn-action" (click)="onProcess()">Ghi nhận </button>
+  </modal-footer>
+
+</modal>
