--- a/src/app/personnels/notes/note-form/note-form.component.html
+++ b/src/app/personnels/notes/note-form/note-form.component.html
@@ -4,9 +4,9 @@
   </div>
   <div>
     <p>* Quý vị nhấn icon <span><i class="fa fa-plus"></i></span> này để nạp dữ liệu và nhấn
-      <span><i class="fa fa-save "></i></span> Ghi nhận để thêm mới thông tin </p>
+      <button class="btn-action"> Ghi nhận</button> để thêm mới thông tin </p>
     <p>* Quý vị nhấn icon <span><i class="fa fa-edit"></i></span> này để sửa dữ liệu và nhấn
-      <span><i class="fa fa-save "></i></span> Ghi nhận để cập nhật thông tin </p>
+      <button class="btn-action"> Ghi nhận</button> để cập nhật thông tin </p>
     <p>* Quý vị nhấn icon <span><i class="fa fa-remove icon-remove-update "></i></span> này để bỏ qua việc cập nhật </p>
     <p>* Quý vị nhấn icon <span><i class="fa fa-remove  "></i></span> này để xóa dữ liệu </p>
     <ng-content></ng-content>
